--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -50,11 +50,30 @@
 
     <ImageView
         android:id="@+id/badConnectivity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal|center"
+        android:contentDescription="@string/low_connectivity_warning"
+        android:elevation="50dp"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/ic_cloud_off_black_48dp"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/noDeviceSelectedWarning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:contentDescription="@string/low_connectivity_warning"
-        android:visibility="invisible"
-        app:srcCompat="@drawable/ic_cloud_off_black_48dp" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="68dp"
+        android:background="@drawable/select_device_warn_background"
+        android:fontFamily="@font/roboto_slab"
+        android:paddingEnd="3dp"
+        android:paddingStart="3dp"
+        android:text="Select a device first"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@android:color/black"
+        android:textSize="14sp"
+        android:visibility="visible" />
 
 </android.support.design.widget.CoordinatorLayout>
