--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -90,11 +90,12 @@
         android:layout_marginEnd="28dp"
         android:layout_marginStart="8dp"
         android:background="@android:color/transparent"
+        android:tint="#333"
         app:layout_constraintBottom_toBottomOf="@+id/userNameNavHeader"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/userNameNavHeader"
         app:layout_constraintTop_toTopOf="@+id/userNameNavHeader"
-        app:srcCompat="@drawable/ic_settings_black_24dp" />
+        app:srcCompat="@drawable/ic_settings_black_24dp"/>
 
 </android.support.constraint.ConstraintLayout>
