--- a/app/src/main/res/layout/fragment_action.xml
+++ b/app/src/main/res/layout/fragment_action.xml
@@ -34,6 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
                 android:indeterminate="true"
                 android:visibility="invisible"
                 tools:visibility="visible" />
