--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -59,32 +59,32 @@
     <ImageButton
         android:id="@+id/addAppBtn"
         style="@android:style/Widget.DeviceDefault.ImageButton"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="68dp"
+        android:layout_marginEnd="84dp"
         android:background="@android:color/transparent"
         android:contentDescription="Add application"
         android:padding="5dp"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="?android:attr/listChoiceIndicatorMultiple" />
+        app:srcCompat="@drawable/application" />
 
     <ImageButton
         android:id="@+id/addDeviceBtn"
         style="@android:style/Widget.DeviceDefault.ImageButton"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="28dp"
         android:background="@android:color/transparent"
         android:contentDescription="Add device"
         android:padding="5dp"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="?android:attr/listChoiceIndicatorSingle" />
+        app:srcCompat="@drawable/device" />
 
     <ImageButton
         android:id="@+id/navHeaderSettingsBtn"
